# redfish-service-py

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/redfish_service/: __init__.py  authenticate.py  cli.py  exception.py  middleware.py  odata.py  server.py  service.py  util.py
src/redfish_service/model/: __init__.py  acceleration_function.py  acceleration_function_collection.py  account_service.py  action_info.py  address_pool.py  address_pool_collection.py  aggregate.py  aggregate_collection.py  aggregation_service.py  aggregation_source.py  aggregation_source_collection.py  allow_deny.py  allow_deny_collection.py  application.py  application_collection.py  assembly.py  attribute_registry.py  automation_instrumentation.py  automation_node.py  automation_node_collection.py  battery.py  battery_collection.py  battery_metrics.py  bios.py  boot_option.py  boot_option_collection.py  cable.py  cable_collection.py  certificate.py  certificate_collection.py  certificate_enrollment.py  certificate_enrollment_collection.py  certificate_locations.py  certificate_service.py  chassis.py  chassis_collection.py  circuit.py  circuit_collection.py  collection_capabilities.py  (+239 more)
src/redfish_service/repository/: __init__.py  instance.py
src/redfish_service/router/: __init__.py  acceleration_function.py  acceleration_function_collection.py  account_service.py  address_pool.py  address_pool_collection.py  aggregate.py  aggregate_collection.py  aggregation_service.py  aggregation_source.py  aggregation_source_collection.py  allow_deny.py  allow_deny_collection.py  application.py  application_collection.py  assembly.py  automation_instrumentation.py  automation_node.py  automation_node_collection.py  battery.py  battery_collection.py  battery_metrics.py  bios.py  boot_option.py  (+236 more)
test/redfish_service/: test_cli.py  test_router_service_root.py  test_router_session_collection.py  test_server.py  test_service.py  test_v1_service_root.py  test_v1_session_collection.py
tools/: gen.sh
(+412 files in other folders)
