[project]
name = "redfish-service"
version = "0.1.0"
authors = [
  {name="9506hqwy"},
]
description = "Redfish Service"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">= 3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn>=0.32.1",
]

[project.scripts]
redfish-service = "redfish_service.cli:main"

[project.urls]
Homepage = "https://github.com/9506hqwy/redfish-service-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.11.2",
  "redfish-service-validator>=2.4.9",
  "ruff>=0.6.4",
]
doc = [
  "sphinx>=7.4.7",
]
test = [
  "httpx>=0.28.1",
  "pytest-cov>=5.0.0",
  "pytest>=8.3.2",
  "tox-uv>=1.11.3",
  "tox>=4.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redfish_service"]

[tool.mypy]
disallow_subclassing_any = true
disallow_untyped_defs = true
implicit_optional = false
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# occur `no-data-collected` at coverage if removed.
pythonpath = "src"

[tool.ruff]
# relaxed line length
line-length = 99

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
  format
  lint
  type
  py312
  py313

[testenv]
deps =
  httpx
  pytest
  pytest-cov
commands =
  pytest --cov-append --cov=src -v

[testenv:format]
deps = ruff
commands =
  ruff format --check

[testenv:lint]
deps = ruff
commands =
  ruff check

[testenv:type]
deps = mypy
commands =
  mypy ./src
"""
